--- a/classroom/src/app/app.component.html
+++ b/classroom/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!-- Title Banner -->
-<app-header></app-header>
+<app-header class="flex-grow-0"></app-header>
 <!-- Loading screen cover -->
 <ngx-ui-loader></ngx-ui-loader>
 <!-- content -->
-<main>
+<main class="flex-grow-1">
   <router-outlet></router-outlet>
 </main>
 <!-- message runner -->
