--- a/classroom/src/app/comparison/comparison.component.html
+++ b/classroom/src/app/comparison/comparison.component.html
@@ -38,6 +38,22 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
           <td mat-cell *matCellDef="let clust;"><span matTooltip="{{clust.counts.join(' + ')}}" matTooltipPosition="after">{{clust.count}}</span></td>
         </ng-container>
+        <ng-container matColumnDef="bar">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let clust;">
+            <div matTooltip="{{clust.count}}: {{clust.counts.join(' vs ')}}" matTooltipPosition="after">
+            <svg xmlns="http://www.w3.org/2000/svg"
+                 [style.width]="'80px'" [style.height]="'32px'">
+              <desc>{{clust.counts.join(' vs ')}}</desc>
+              <rect [attr.x]="(50-clust.left(max_count))+'%'" y="7" height="18" [attr.width]="clust.left(max_count)+'%'"
+                    [attr.fill]="doc_colors[0]" stroke-width="1"/>
+              <rect x="50%" y="7" height="18" [attr.width]="clust.right(max_count)+'%'"
+                    [attr.fill]="doc_colors[1]" stroke-width="1"/>
+              <line stroke="black" x1="50%" x2="50%" y1="0" y2="32"/>
+            </svg>
+            </div>
+          </td>
+        </ng-container>
         <ng-container matColumnDef="expand">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let clust;">
@@ -77,15 +93,26 @@
     </nav>
     <main *ngIf="documents" class="text_cards">
       <as-split unit="percent" [direction]="direction">
-        <as-split-area *ngFor="let doc of documents.documents; index as i">
-          <mat-card class="text_card">
-            <mat-card-title class="text_head">ID:&nbsp;{{doc.text_id}} Owner:&nbsp;{{doc.owner}}</mat-card-title>
-            <mat-card-content>
-              <article class="text_content" [innerHTML]="html_content[i]"
+        <as-split-area *ngFor="let doc of documents.documents; index as i" [style.overflow]="'hidden'">
+          <div class="document_entry" [style.border-color]="doc_colors[i]">
+            <div class="text_head" [style.background]="doc_colors[i]">
+              <span>ID:&nbsp;{{doc.text_id}}</span>
+              <span>Owner:&nbsp;{{doc.owner}}</span>
+            </div>
+            <div class="document_body">
+            <article class="text_content" [innerHTML]="html_content[i]"
+                     (click)="click_select($event)">
+            </article>
+            </div>
+          </div>
+          <!--<mat-card class="text_card">
+            <mat-card-title class="text_head" [style.color]="doc_colors[i]">ID:&nbsp;{{doc.text_id}} Owner:&nbsp;{{doc.owner}}</mat-card-title>
+            <mat-card-content class="text_card_content">
+              <article class="text_content" [style.border-color]="doc_colors[i]" [style.overflow]="'auto'" [innerHTML]="html_content[i]"
                        (click)="click_select($event)">
               </article>
             </mat-card-content>
-          </mat-card>
+          </mat-card>-->
         </as-split-area>
       </as-split>
     </main>
