--- a/classroom/src/app/compare-patterns-table/compare-patterns-table.component.html
+++ b/classroom/src/app/compare-patterns-table/compare-patterns-table.component.html
@@ -14,14 +14,16 @@
       <mat-icon [style.color]="left_color">assignment</mat-icon>
     </th>
     <td mat-cell *matCellDef="let row">
-      <span [style.color]="left_color">{{row.count0}}</span>
+      <span class="col-align" [style.color]="left_color">{{row.count0}}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="count1">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>
       <mat-icon [style.color]="right_color">assignment</mat-icon>
     </th>
-    <td mat-cell *matCellDef="let row"><span [style.color]="right_color">{{row.count1}}</span></td>
+    <td mat-cell *matCellDef="let row">
+      <span class="col-align" [style.color]="right_color">{{row.count1}}</span>
+    </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayColumns; sticky: true"></tr>
   <tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
