--- a/classroom/src/app/comparison/comparison.component.html
+++ b/classroom/src/app/comparison/comparison.component.html
@@ -89,11 +89,22 @@
   <div class="document_area">
     <nav class="layout mat-accent">
       <mat-button-toggle-group [(value)]="direction">
-        <mat-button-toggle value="vertical" aria-label="Top-Bottom View"><mat-icon>view_stream</mat-icon></mat-button-toggle>
-        <mat-button-toggle value="horizontal" aria-label="Left-Right View"><mat-icon>view_column</mat-icon></mat-button-toggle>
+        <mat-button-toggle value="column" aria-label="Top-Bottom View"><mat-icon>view_stream</mat-icon></mat-button-toggle>
+        <mat-button-toggle value="row" aria-label="Left-Right View"><mat-icon>view_column</mat-icon></mat-button-toggle>
       </mat-button-toggle-group>
     </nav>
-    <main *ngIf="documents" class="text_cards">
+    <main *ngIf="documents" class="text_cards" [style.flex-direction]="direction">
+      <div class="document_entry" *ngFor="let doc of documents.documents; index as i">
+        <div class="text_head" [style.background]="doc_colors[i]">
+          <span>ID:&nbsp;{{doc.text_id}}</span>
+          <span>Owner:&nbsp;{{doc.owner}}</span>
+        </div>
+        <article class="text_content" [innerHTML]="html_content[i]"
+                 (click)="click_select($event)">
+        </article>
+      </div>
+    </main>
+    <!--<main *ngIf="documents" class="text_cards">
       <as-split unit="percent" [direction]="direction">
         <as-split-area *ngFor="let doc of documents.documents; index as i" [style.overflow]="'hidden'">
           <div class="document_entry">
@@ -106,7 +117,7 @@
                      (click)="click_select($event)">
             </article>
             </div>
-          </div>
+          </div>-->
           <!--<mat-card class="text_card">
             <mat-card-title class="text_head" [style.color]="doc_colors[i]">ID:&nbsp;{{doc.text_id}} Owner:&nbsp;{{doc.owner}}</mat-card-title>
             <mat-card-content class="text_card_content">
@@ -115,8 +126,8 @@
               </article>
             </mat-card-content>
           </mat-card>-->
-        </as-split-area>
+        <!--</as-split-area>
       </as-split>
-    </main>
+    </main>-->
   </div>
 </div>
