Separate interface for Safari.

--- a/classroom/src/app/comparison/comparison.component.css
+++ b/classroom/src/app/comparison/comparison.component.css
@@ -72,22 +72,18 @@ tr.cluster-detail-row {
   border: 1px solid silver;
   display: flex;
   flex-direction: column;
-  flex: 0 1 50%;
-  /*height: 100%;
-  width: 100%;*/
+  /*flex: 0 1 50%;*/
+  height: 100%;
+  width: 100%;
   overflow: hidden;
 }
 .document_body {
   flex: 1 1 auto;
   overflow: auto;
 }
-/*.text_card {
-  margin: 5px;
-}*/
 .text_head {
   flex: 1 0 auto;
   overflow: hidden;
-  text-overflow: ellipsis;
   color: white;
   display: flex;
   flex-direction: row;
@@ -96,16 +92,32 @@ tr.cluster-detail-row {
 }
 .text_head > span {
   font-size: larger;
-  font-weight: bold;
   margin-right: 1.5em;
   text-overflow: ellipsis;
   overflow: hidden;
 }
 .text_content {
-  flex: 1 1 auto;
   line-height: 175%;
   max-width: 6.5in;
   padding-left: 18px;
   padding-right: 18px;
+}
+
+.safari_entry {
+  flex: 1 1;
   overflow: auto;
+}
+.safari_head {
+  overflow: hidden;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 3px 1em;
+}
+.safari_head > span {
+  font-size: larger;
+  margin-right: 1.5em;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
