--- a/classroom/src/styles.css
+++ b/classroom/src/styles.css
@@ -16,32 +16,38 @@
   border-bottom-width: 3px;
 }
 .cluster_0 {
-  border-bottom-color: rgba(255,0,32,0.7);
+  border-bottom-color: rgb(255, 0, 32); /* fallback */
+  border-bottom-color: rgba(255, 0, 32, 0.7);
   border-bottom-style: solid;
   border-bottom-width: 3px;
 }
 .cluster_1 {
-  border-bottom-color: rgba(255,172,0,0.7);
+  border-bottom-color: rgb(255, 172, 0); /* fallback */
+  border-bottom-color: rgba(255, 172, 0, 0.7);
   border-bottom-style: solid;
   border-bottom-width: 3px;
 }
 .cluster_2 {
-  border-bottom-color: rgba(119,189,11,0.7);
+  border-bottom-color: rgb(119, 189, 11); /* fallback */
+  border-bottom-color: rgba(119, 189, 11, 0.7);
   border-bottom-style: solid;
   border-bottom-width: 3px;
 }
 .cluster_3 {
-  border-bottom-color: rgba(49,117,230,0.7);
+  border-bottom-color: rgb(49, 117, 230); /* fallback */
+  border-bottom-color: rgba(49, 117, 230, 0.7);
   border-bottom-style: solid;
   border-bottom-width: 3px;
 }
 .cluster_4 {
-  border-bottom-color: rgba(137,80,224,0.7);
+  border-bottom-color: rgb(137, 80, 224); /* fallback */
+  border-bottom-color: rgba(137, 80, 224, 0.7);
   border-bottom-style: solid;
   border-bottom-width: 3px;
 }
 .cluster_5 {
-  border-bottom-color: rgba(220,10,169,0.7);
+  border-bottom-color: rgb(220, 10, 169); /* fallback */
+  border-bottom-color: rgba(220, 10, 169, 0.7);
   border-bottom-style: solid;
   border-bottom-width: 3px;
 }
@@ -51,8 +57,8 @@
 
 /* scatterplot */
 circle.dot {
-  fill: black;
   cursor: pointer;
+  fill: black;
   filter: opacity(60%);
 }
 
