--- a/classroom/src/app/comparison/comparison.component.css
+++ b/classroom/src/app/comparison/comparison.component.css
@@ -105,7 +105,7 @@ tr.cluster-detail-row {
 
 .safari_entry {
   flex: 1 1;
-  overflow: auto;
+  overflow-y: auto;
 }
 .safari_head {
   color: white;
