ds_data provides data for category, subcategory, and cluster.
Need to adapt in classroom as label and description are no longer
available.
Should provide common_dict.json from app to guarantee consistency

--- a/classroom/src/styles.css
+++ b/classroom/src/styles.css
@@ -3,6 +3,7 @@
 
 /* angular material */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+/*@import "~@circlon/angular-tree-component/css/angular-tree-component.css";*/
 
 .cluster_id {
   background: lightgrey;
