--- a/classroom/src/app/category-select/category-select.component.html
+++ b/classroom/src/app/category-select/category-select.component.html
@@ -1,11 +1,13 @@
 <ng-container *ngIf="data">
-    <button mat-button [matMenuTriggerFor]="categoryMenu">Category<span *ngIf="selectedName">: {{selectedName}}</span></button>
+    <button mat-raised-button color="primary" [matMenuTriggerFor]="categoryMenu">Category<span *ngIf="selectedCategory">: {{selectedCategory}}</span></button>
     <mat-menu #categoryMenu="matMenu">
         <ng-container *ngFor="let category of data.categories">
-            <button mat-menu-item [matMenuTriggerFor]="subcat">{{category.label}}</button>
+            <button mat-menu-item [matMenuTriggerFor]="subcat"
+                (click)="selectCategory(category)">{{category.label}}</button>
             <mat-menu #subcat="matMenu">
                 <ng-container *ngFor="let sub of category.subcategories">
-                    <button mat-menu-item [matMenuTriggerFor]="cluster">{{sub.label}}</button>
+                    <button mat-menu-item [matMenuTriggerFor]="cluster"
+                        (click)="selectCategory(sub)">{{sub.label}}</button>
                     <mat-menu #cluster>
                         <button mat-menu-item *ngFor="let cluster of sub.clusters"
                             (click)="selectCluster(cluster)"
