Boxplot graphs in tree.

--- a/classroom/src/app/rank-graph/rank-graph.component.html
+++ b/classroom/src/app/rank-graph/rank-graph.component.html
@@ -1,6 +1,6 @@
 <mat-card *ngIf="category">
   <mat-card-title>
-    Category: {{category.name}}
+    Category: {{category.id}} <!-- label(category.id)-->
   </mat-card-title>
   <mat-card-content>
     <mat-table matSort #rankSort=matSort matSortDisableClear
