--- a/classroom/src/app/scatterplot/scatterplot.component.html
+++ b/classroom/src/app/scatterplot/scatterplot.component.html
@@ -6,7 +6,11 @@
     <mat-card-subtitle>Units are average number of incidences per {{unit}} words.</mat-card-subtitle>
     <mat-card-content *ngIf="data" class="scatter_container">
       <div class="axis_selection">
-        <mat-form-field class="axis_select">
+        <mat-label class="grid-item">X Axis: </mat-label>
+        <mat-label class="grid-item">Y Axis: </mat-label>
+        <app-category-select class="grid-item" [selectedCategory]="x_axis" (selectedCategoryChange)="on_select_x($event)"></app-category-select>
+        <app-category-select class="grid-item" [selectedCategory]="y_axis" (selectedCategoryChange)="on_select_y($event)"></app-category-select>
+        <!--<mat-form-field class="axis_select">
           <mat-label>Y Axis</mat-label>
           <select matNativeControl required [(ngModel)]="y_axis" (ngModelChange)="on_select($event)" ngOptions>
             <option *ngFor="let y of y_categories" [value]="y.id">{{y.name}}</option>
@@ -17,12 +21,12 @@
           <select matNativeControl required [(ngModel)]="x_axis" (ngModelChange)="on_select($event)">
             <option *ngFor="let x of x_categories" [value]="x.id">{{x.name}}</option>
           </select>
-        </mat-form-field>
-      </div>
+        </mat-form-field>-->
+      </div><!-- category.id => name(category.id) -->
       <google-chart #scatterplot *ngIf="scatter_data"
-                    [title]="x_category.name+' vs '+y_category.name"
+                    [title]="x_category.id+' vs '+y_category.id"
                     [type]="'ScatterChart'"
-                    [columns]="[x_category.name, y_category.name, {type: 'string', role: 'id'}, {type: 'string', role: 'style'}, {'type': 'string', 'role': 'tooltip'}]"
+                    [columns]="[x_category.id, y_category.id, {type: 'string', role: 'id'}, {type: 'string', role: 'style'}, {'type': 'string', 'role': 'tooltip'}]"
                     [data]="scatter_data"
                     (select)="select_point(scatterplot, $event)"
                     [options]="options"
