--- a/classroom/src/app/boxplot-graph/boxplot-graph.component.html
+++ b/classroom/src/app/boxplot-graph/boxplot-graph.component.html
@@ -1,9 +1,86 @@
-<table mat-table matSort #box_plot_table *ngIf="boxplot_data"
+<div *ngIf="ds_data" class="tree-node"><span class="column-header">Column</span>
+  <svg xmlns="http://www.w3.org/2000/svg" class="column-header"
+  [style.width]="options.width+'px'"
+  [style.height]="options.height+'px'">
+<desc>Linear scale ruler from 0 to {{x.tickFormat(10)(x.ticks(10)[10])}}.</desc>
+<g fill="none" font-size="9"
+  font-weight="normal" text-anchor="middle">
+ <line stroke="currentColor" [attr.x1]="scale_x(0)"
+       [attr.x2]="scale_x(max_value)"
+       [attr.y1]="17" [attr.y2]="17"/>
+ <g class="tick" *ngFor="let tick of x.ticks(10); index as i;">
+   <line stroke="currentColor"
+         [attr.x1]="x(tick)" [attr.x2]="x(tick)"
+         y1="12" y2="17"/>
+   <text [attr.x]="x(tick)" [attr.y]="11"
+         fill="currentColor">{{x.tickFormat(10)(tick)}}</text>
+ </g>
+</g>
+</svg>
+</div>
+<mat-tree *ngIf="ds_data" [dataSource]="treeData" [treeControl]="treeControl" class="tree">
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+    <li class="mat-tree-node tree-node">
+      <div>
+      <button mat-icon-button disabled></button>
+      {{node.label}}
+      <button mat-icon-button matTooltip="{{node.help}}" matTooltipPosition="after">
+        <mat-icon class="tooltip-icon">comment</mat-icon>
+      </button>
+      </div>
+      <div>
+      <ng-container [ngTemplateOutlet]="svgboxplot"
+        [ngTemplateOutletContext]="{row:node}"></ng-container>
+      </div>
+    </li>
+  </mat-tree-node>
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+    <li>
+      <div class="mat-tree-node tree-node">
+        <div>
+        <button mat-icon-button matTreeNodeToggle
+          [attr.aria-label]="'Toggle ' + node.label">
+          <mat-icon class="mat-icon-rtl-mirror">
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+          </mat-icon>
+        </button>
+        {{node.label}}
+        <button mat-icon-button matTooltip="{{node.help}}" matTooltipPosition="after">
+          <mat-icon class="tooltip-icon">comment</mat-icon>
+        </button></div>
+        <div><ng-container [ngTemplateOutlet]="svgboxplot"
+        [ngTemplateOutletContext]="{row:node}"></ng-container></div>
+      </div>
+      <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+        <ng-container matTreeNodeOutlet></ng-container>
+      </ul>
+    </li>
+  </mat-nested-tree-node>
+</mat-tree>
+<!--<mat-table *ngIf="commonDictionary" [dataSource]="commonDictionary.categories">
+  <ng-container matColumnDef="label">
+    <mat-header-cell *matHeaderCellDef>Category</mat-header-cell>
+    <mat-cell *matCellDef="let category">{{category.label}}
+      <button mat-icon-button matTooltip="{{category.help}}" matTooltipPosition="after">
+        <mat-icon class="tooltip-icon">comment</mat-icon>
+      </button>
+    </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="subcategory">
+    <mat-cell *matCellDef="let category">{{category.subcategories[0]}}</mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="['label']; sticky: true"></mat-header-row>
+  <mat-row *matRowDef="let category; columns: ['label'];"></mat-row>
+  <mat-row *matRowDef="let sub; columns: ['subcategory'];"></mat-row>
+</mat-table>-->
+<!-- <table mat-table matSort #box_plot_table *ngIf="boxplot_data"
        #boxplotSort=matSort
        [dataSource]="boxplot_data">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-    <td mat-cell *matCellDef="let row">{{row.name}}<button mat-icon-button matTooltip="{{row.description}}" matTooltipPosition="after"><mat-icon class="tooltip-icon">comment</mat-icon></button></td>
+    <td mat-cell *matCellDef="let row">{{row.id}}<button mat-icon-button matTooltip="{{row.description}}" matTooltipPosition="after"><mat-icon class="tooltip-icon">comment</mat-icon></button></td>
   </ng-container>
   <ng-container matColumnDef="boxplot">
     <th mat-header-cell *matHeaderCellDef>
@@ -42,14 +119,14 @@
           the third quantile is {{scale(row.q3)}},
           and the maximum is {{scale(row.uifence)}}.
         </desc>
-        <!-- Base line -->
+        <!- Base line ->
         <line [attr.x1]="scale_x(row.lifence)"
               [attr.x2]="scale_x(row.uifence)"
               [attr.y1]="scale_y(0.5)"
               [attr.y2]="scale_y(0.5)"
               [style.stroke]="'#3c3c3c'"
               [style.stroke-width]="'1px'"/>
-        <!-- Q1 to Q3 -->
+        <!- Q1 to Q3 ->
         <rect [attr.x]="scale_x(row.q1)"
               [attr.y]="scale_y(0.1)"
               [attr.height]="scale_y(0.9) - scale_y(0.1)"
@@ -57,21 +134,21 @@
               [attr.fill]="'#EEEEEE'"
               [attr.stroke]="'#3C3C3C'"
               [attr.stroke-width]="1"/>
-        <!-- Median -->
+        <!- Median ->
         <line [attr.x1]="scale_x(row.q2)"
               [attr.x2]="scale_x(row.q2)"
               [attr.y1]="scale_y(0.1)"
               [attr.y2]="scale_y(0.9)"
               [style.stroke]="'#3c3c3c'"
               [style.stroke-width]="1"/>
-        <!-- Minimum -->
+        <!- Minimum ->
         <line [attr.x1]="scale_x(row.lifence)"
               [attr.x2]="scale_x(row.lifence)"
               [attr.y1]="scale_y(0.25)"
               [attr.y2]="scale_y(0.75)"
               [style.stroke]="'#3c3c3c'"
               [style.stroke-width]="1"/>
-        <!-- Maximum -->
+        <!- Maximum ->
         <line [attr.x1]="scale_x(row.uifence)"
               [attr.x2]="scale_x(row.uifence)"
               [attr.y1]="scale_y(0.25)"
@@ -99,3 +176,70 @@
       [class.selected]="selection.isSelected(row)"
       (click)="handle_selection(row)"></tr>
 </table>
+ -->
+<ng-template #svgboxplot let-row="row">
+  <svg class="box_plot_tree_item"
+    [attr.width]="options.width+'px'"
+    [attr.height]="options.height+'px'"
+    [attr.data-min]="row.lifence"
+    [attr.data-q1]="row.q1"
+    [attr.data-q2]="row.q2"
+    [attr.data-q3]="row.q3"
+    [attr.data-max]="row.uifence"
+    matTooltip="Minimum={{scale(row.min)}};  First Quantile={{scale(row.q1)}};  Median={{scale(row.q2)}};  Third Quantile={{scale(row.q3)}};  Maximum={{scale(row.max)}}">
+  <desc>A box plot where the minimum is {{scale(row.lifence)}},
+    the first quantile is {{scale(row.q1)}},
+    the median is {{scale(row.q2)}},
+    the third quantile is {{scale(row.q3)}},
+    and the maximum is {{scale(row.uifence)}}.
+  </desc>
+  <!-- Base line -->
+  <line [attr.x1]="scale_x(row.lifence)"
+     [attr.x2]="scale_x(row.uifence)"
+     [attr.y1]="scale_y(0.5)"
+     [attr.y2]="scale_y(0.5)"
+     [style.stroke]="'#3c3c3c'"
+     [style.stroke-width]="'1px'"/>
+  <!-- Q1 to Q3 -->
+  <rect [attr.x]="scale_x(row.q1)"
+     [attr.y]="scale_y(0.1)"
+     [attr.height]="scale_y(0.9) - scale_y(0.1)"
+     [attr.width]="scale_x(row.q3) - scale_x(row.q1)"
+     [attr.fill]="'#EEEEEE'"
+     [attr.stroke]="'#3C3C3C'"
+     [attr.stroke-width]="1"/>
+  <!-- Median -->
+  <line [attr.x1]="scale_x(row.q2)"
+     [attr.x2]="scale_x(row.q2)"
+     [attr.y1]="scale_y(0.1)"
+     [attr.y2]="scale_y(0.9)"
+     [style.stroke]="'#3c3c3c'"
+     [style.stroke-width]="1"/>
+  <!-- Minimum -->
+  <line [attr.x1]="scale_x(row.lifence)"
+     [attr.x2]="scale_x(row.lifence)"
+     [attr.y1]="scale_y(0.25)"
+     [attr.y2]="scale_y(0.75)"
+     [style.stroke]="'#3c3c3c'"
+     [style.stroke-width]="1"/>
+  <!-- Maximum -->
+  <line [attr.x1]="scale_x(row.uifence)"
+     [attr.x2]="scale_x(row.uifence)"
+     [attr.y1]="scale_y(0.25)"
+     [attr.y2]="scale_y(0.75)"
+     [style.stroke]="'#3c3c3c'"
+     [style.stroke-width]="1"/>
+  <g>
+    <a *ngFor="let out of get_outliers(row)"
+      (click)="open('stv/'+out.id)">
+    <circle [attr.cx]="scale_x(out.value)"
+           [attr.cy]="scale_y(0.5)"
+           [attr.r]="scale_y(0.1)"
+           [style.fill]="'#52be80'"
+           [style.stroke-width]="1"
+           [style.stroke]="'#eeeeee'"
+           matTooltip="{{out.title}}: {{scale(out.value)}}"/>
+    </a>
+  </g>
+  </svg>
+</ng-template>
