--- a/classroom/src/app/patterns/patterns.component.html
+++ b/classroom/src/app/patterns/patterns.component.html
@@ -5,13 +5,69 @@
     <mat-card-subtitle>Number of instances of each category across all documents.</mat-card-subtitle>
     <mat-card-subtitle>Click on a row to get a breakdown of the patterns in each cluster.</mat-card-subtitle>
     <mat-card-content class="patterns_container">
-      <table mat-table matSort #cluster_table
+      <mat-tree [dataSource]="treeData" [treeControl]="treeControl"
+  class="tree">
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+    <li class="mat-tree-node tree-node">
+      <div>
+        <button mat-icon-button disabled></button>
+        <ng-container [ngTemplateOutlet]="patternlabel"
+          [ngTemplateOutletContext]="{row:node}"></ng-container>
+      </div>
+      <div>{{node.count}}</div>
+    </li>
+  </mat-tree-node>
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+    <li>
+      <div class="mat-tree-node tree-node">
+        <div>
+          <button mat-icon-button matTreeNodeToggle
+            [attr.aria-label]="'Toggle ' + node.label">
+            <mat-icon class="mat-icon-rtl-mirror">
+              {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+            </mat-icon>
+          </button>
+          <ng-container [ngTemplateOutlet]="patternlabel"
+          [ngTemplateOutletContext]="{row:node}"></ng-container>
+        </div>
+        <div>{{node.count}}</div>
+      </div>
+      <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+        <ng-container matTreeNodeOutlet></ng-container>
+      </ul>
+    </li>
+  </mat-nested-tree-node>
+  <mat-tree-node *matTreeNodeDef="let node; when: hasPatterns">
+    <li [style.width]="'100%'">
+      <div class="mat-tree-node tree-node">
+        <div>
+          <button mat-icon-button matTreeNodeToggle
+            [attr.aria-label]="'Toggle ' + node.label">
+            <mat-icon class="mat-icon-rtl-mirror">
+              {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+            </mat-icon>
+          </button>
+          <ng-container [ngTemplateOutlet]="patternlabel"
+          [ngTemplateOutletContext]="{row:node}"></ng-container>
+        </div>
+        <div>{{node.count}}</div>
+      </div>
+      <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+        <app-patterns-table [patterns]="node.patterns"></app-patterns-table>
+      </ul>
+    </li>
+  </mat-tree-node>
+</mat-tree>
+
+<figure id="sunburst"></figure>
+
+<!--      <table mat-table matSort #cluster_table
              #clusterTableSort=matSort matSortDisableClear
              [dataSource]="patterns_data" multiTemplateDataRows>
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
           <td mat-cell *matCellDef="let clust">
-            {{clust.name}}
+            {{clust.id}}
             <button mat-icon-button matTooltip="{{clust.description}}" matTooltipPosition="after"><mat-icon class="tooltip-icon">comment</mat-icon>
           </button></td>
         </ng-container>
@@ -50,7 +106,14 @@
             [class.cluster-expanded-row]="clust === expanded"></tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']"
             class="cluster-detail-row"></tr>
-      </table>
+      </table>-->
     </mat-card-content>
   </mat-card>
 </div>
+<ng-template #patternlabel let-row="row">
+  {{row.label}}
+  <button *ngIf="row.help" mat-icon-button matTooltip="{{row.help}}"
+    matTooltipPosition="after">
+    <mat-icon class="tooltip-icon">comment</mat-icon>
+  </button>
+</ng-template>
