--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -3,6 +3,58 @@
     <mat-card-title>Dictionary Categories</mat-card-title>
     <mat-card-subtitle>Select up to {{max_selected_clusters}}:</mat-card-subtitle>
     <mat-card-content>
+      <mat-tree [dataSource]="treeData" [treeControl]="treeControl"
+        class="tree">
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+          <li class="mat-tree-node tree-node">
+            <div>
+              <button mat-icon-button disabled></button>
+              <ng-container [ngTemplateOutlet]="patternlabel"
+              [ngTemplateOutletContext]="{row:node}"></ng-container>
+            </div>
+          </li>
+        </mat-tree-node>
+        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+          <li>
+            <div class="mat-tree-node tree-node">
+              <div>
+                <button mat-icon-button matTreeNodeToggle
+                  [attr.aria-label]="'Toggle ' + node.label">
+                  <mat-icon class="mat-icon-rtl-mirror">
+                    {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                  </mat-icon>
+                </button>
+                <ng-container [ngTemplateOutlet]="patternlabel"
+                  [ngTemplateOutletContext]="{row:node}"></ng-container>
+              </div>
+              <div>{{node.count}}</div>
+            </div>
+            <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+              <ng-container matTreeNodeOutlet></ng-container>
+            </ul>
+          </li>
+        </mat-nested-tree-node>
+        <mat-tree-node *matTreeNodeDef="let node; when: hasPatterns">
+          <li [style.width]="'100%'">
+            <div class="mat-tree-node tree-node">
+              <div>
+                <button mat-icon-button matTreeNodeToggle
+                  [attr.aria-label]="'Toggle ' + node.label">
+                  <mat-icon class="mat-icon-rtl-mirror">
+                    {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                  </mat-icon>
+                </button>
+                <ng-container [ngTemplateOutlet]="patternlabel"
+                  [ngTemplateOutletContext]="{row:node}"></ng-container>
+              </div>
+              <div>{{node.count}}</div>
+            </div>
+            <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+              <app-patterns-table [patterns]="node.patterns"></app-patterns-table>
+            </ul>
+          </li>
+        </mat-tree-node>
+      </mat-tree>
       <!--<tree-root *ngIf="dictionary" [nodes]="dictionary.tree"></tree-root>-->
       <!--<table mat-table matSort #clusterTable
              #TableSort=matSort  [dataSource]="clusters"
@@ -62,10 +114,17 @@
     </mat-card-content>
   </mat-card>
   <mat-card *ngIf="tagged_text" class="text_card">
-    <mat-card-title class="text_head">ID:&nbsp;{{tagged_text.text_id}}</mat-card-title>
+    <mat-card-title class="text_head">ID:&nbsp;{{tagged_text.documents[0].text_id}}</mat-card-title>
     <mat-card-content>
       <article class="text_content" [innerHTML]="htmlContent"
                (click)="click_select($event)"></article>
     </mat-card-content>
   </mat-card>
 </div>
+<ng-template #patternlabel let-row="row">
+  {{row.label}}
+  <button *ngIf="row.help" mat-icon-button matTooltip="{{row.help}}"
+    matTooltipPosition="after">
+    <mat-icon class="tooltip-icon">comment</mat-icon>
+  </button>
+</ng-template>
