--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -27,7 +27,7 @@
                 <ng-container [ngTemplateOutlet]="patternlabel"
                   [ngTemplateOutletContext]="{row:node}"></ng-container>
               </div>
-              <div>{{node.count}}</div>
+              <div [class.tree-node-invisible]="treeControl.isExpanded(node)">{{node.count}}</div>
             </div>
             <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
               <ng-container matTreeNodeOutlet></ng-container>
@@ -49,9 +49,11 @@
               </div>
               <div>{{node.count}}</div>
             </div>
-            <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+            <div
+              [class.pattern-table]="true"
+              [class.tree-node-invisible]="!treeControl.isExpanded(node)">
               <app-patterns-table [patterns]="node.patterns"></app-patterns-table>
-            </ul>
+            </div>
           </li>
         </mat-tree-node>
       </mat-tree>
