--- a/classroom/src/app/patterns/patterns.component.css
+++ b/classroom/src/app/patterns/patterns.component.css
@@ -47,7 +47,8 @@ tr.cluster-detail-row {
 }
 
 .pattern-table {
-  max-height: calc(30vh);
+  margin-left: 3em;
+  max-height: 13em; /*calc(30vh);*/
   overflow: auto;
 }
 
