--- a/classroom/src/app/text-view/text-view.component.css
+++ b/classroom/src/app/text-view/text-view.component.css
@@ -45,7 +45,7 @@ tr.cluster-detail-row {
 
 .pattern-table {
   margin-left: 3em;
-  max-height: calc(30vh);
+  max-height: 13em; /*calc(30vh);*/
   overflow: auto;
 }
 
