--- a/classroom/src/app/patterns/patterns.component.html
+++ b/classroom/src/app/patterns/patterns.component.html
@@ -6,110 +6,62 @@
     <mat-card-subtitle>Click on a row to get a breakdown of the patterns in each cluster.</mat-card-subtitle>
     <mat-card-content class="patterns_container">
       <mat-tree [dataSource]="treeData" [treeControl]="treeControl"
-  class="tree">
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-    <li class="mat-tree-node tree-node">
-      <div>
-        <button mat-icon-button disabled></button>
-        <ng-container [ngTemplateOutlet]="patternlabel"
-          [ngTemplateOutletContext]="{row:node}"></ng-container>
-      </div>
-      <div>{{node.count}}</div>
-    </li>
-  </mat-tree-node>
-  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-    <li>
-      <div class="mat-tree-node tree-node">
-        <div>
-          <button mat-icon-button matTreeNodeToggle
-            [attr.aria-label]="'Toggle ' + node.label">
-            <mat-icon class="mat-icon-rtl-mirror">
-              {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-            </mat-icon>
-          </button>
-          <ng-container [ngTemplateOutlet]="patternlabel"
-          [ngTemplateOutletContext]="{row:node}"></ng-container>
-        </div>
-        <div [class.tree-node-invisible]="treeControl.isExpanded(node)">{{node.count}}</div>
-      </div>
-      <ul
-        [class.tree-node-invisible]="!treeControl.isExpanded(node)">
-        <ng-container matTreeNodeOutlet></ng-container>
-      </ul>
-    </li>
-  </mat-nested-tree-node>
-  <mat-tree-node *matTreeNodeDef="let node; when: hasPatterns">
-    <li [style.width]="'100%'">
-      <div class="mat-tree-node tree-node">
-        <div>
-          <button mat-icon-button matTreeNodeToggle
-            [attr.aria-label]="'Toggle ' + node.label">
-            <mat-icon class="mat-icon-rtl-mirror">
-              {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-            </mat-icon>
-          </button>
-          <ng-container [ngTemplateOutlet]="patternlabel"
-          [ngTemplateOutletContext]="{row:node}"></ng-container>
-        </div>
-        <div>{{node.count}}</div>
-      </div>
-      <div
-        [class.pattern-table]="true"
-        [class.tree-node-invisible]="!treeControl.isExpanded(node)">
-        <app-patterns-table [patterns]="node.patterns"></app-patterns-table>
-      </div>
-    </li>
-  </mat-tree-node>
-</mat-tree>
-
-<figure id="sunburst"></figure>
-
-<!--      <table mat-table matSort #cluster_table
-             #clusterTableSort=matSort matSortDisableClear
-             [dataSource]="patterns_data" multiTemplateDataRows>
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-          <td mat-cell *matCellDef="let clust">
-            {{clust.id}}
-            <button mat-icon-button matTooltip="{{clust.description}}" matTooltipPosition="after"><mat-icon class="tooltip-icon">comment</mat-icon>
-          </button></td>
-        </ng-container>
-        <ng-container matColumnDef="pattern_count">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header># Patterns</th>
-          <td mat-cell *matCellDef="let clust">{{clust.pattern_count}}</td>
-        </ng-container>
-        <ng-container matColumnDef="count">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Count</th>
-          <td mat-cell *matCellDef="let clust">{{clust.count}}</td>
-        </ng-container>
-        <ng-container matColumnDef="expand">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let clust;">
-            <button mat-icon-button (click)="expanded = expanded===clust?null:clust">
-              <mat-icon [@indicatorRotate]="clust == expanded ? 'expanded' : 'collapsed'">expand_more</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="expandedDetail">
-          <td mat-cell *matCellDef="let clust"
-              [attr.colspan]="cluster_columns.length">
-            <div class="cluster-detail"
-                 [@detailExpand]="clust == expanded ? 'expanded' : 'collapsed'">
-              <div class="pattern-table">
-                <app-patterns-table [patterns]="clust.patterns"></app-patterns-table>
-              </div>
+          class="tree">
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+          <li class="mat-tree-node tree-node">
+            <div>
+              <button mat-icon-button disabled></button>
+              <ng-container [ngTemplateOutlet]="patternlabel"
+               [ngTemplateOutletContext]="{row:node}"></ng-container>
             </div>
-          </td>
-        </ng-container>
+            <div>{{node.count}}</div>
+          </li>
+        </mat-tree-node>
+        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+          <li>
+            <div class="mat-tree-node tree-node">
+              <div>
+                <button mat-icon-button matTreeNodeToggle
+                    [attr.aria-label]="'Toggle ' + node.label">
+                  <mat-icon class="mat-icon-rtl-mirror">
+                   {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                  </mat-icon>
+                </button>
+                <ng-container [ngTemplateOutlet]="patternlabel"
+                  [ngTemplateOutletContext]="{row:node}"></ng-container>
+              </div>
+              <div [class.tree-node-invisible]="treeControl.isExpanded(node)">{{node.count}}</div>
+            </div>
+            <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+              <ng-container matTreeNodeOutlet></ng-container>
+            </ul>
+          </li>
+        </mat-nested-tree-node>
+        <mat-tree-node *matTreeNodeDef="let node; when: hasPatterns">
+          <li [style.width]="'100%'">
+            <div class="mat-tree-node tree-node">
+              <div>
+                <button mat-icon-button matTreeNodeToggle
+                    [attr.aria-label]="'Toggle ' + node.label">
+                  <mat-icon class="mat-icon-rtl-mirror">
+                    {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                  </mat-icon>
+                </button>
+                <ng-container [ngTemplateOutlet]="patternlabel"
+                    [ngTemplateOutletContext]="{row:node}"></ng-container>
+              </div>
+              <div>{{node.count}}</div>
+            </div>
+            <div [class.pattern-table]="true"
+                [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+              <app-patterns-table [patterns]="node.patterns"></app-patterns-table>
+            </div>
+          </li>
+        </mat-tree-node>
+      </mat-tree>
 
-        <tr mat-header-row *matHeaderRowDef="cluster_columns"></tr>
-        <tr mat-row *matRowDef="let clust; columns:cluster_columns;"
-            class="cluster-row"
-            [class.cluster-expanded-row]="clust === expanded"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']"
-            class="cluster-detail-row"></tr>
-      </table>-->
+      <figure id="sunburst"></figure>
+
     </mat-card-content>
   </mat-card>
 </div>
