--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -3,15 +3,33 @@
     <mat-card-title>Dictionary Categories</mat-card-title>
     <mat-card-subtitle>Select up to {{max_selected_clusters}}:</mat-card-subtitle>
     <mat-card-content>
+      <mat-toolbar>
+      <button mat-icon-button (click)="treeControl.expandAll()"
+          aria-label="Expand All" matTooltip="Expand All">
+        <mat-icon class="mat-icon-rtl-mirror">arrow_drop_down</mat-icon>
+      </button>
+      <button mat-icon-button (click)="treeControl.collapseAll()"
+          aria-label="Collapse All" matTooltip="Collapse All">
+        <mat-icon>arrow_right</mat-icon>
+      </button>
+      <button mat-icon-button (click)="selection.clear()"><mat-icon>check_box_outline_blank</mat-icon></button>
+      </mat-toolbar>
       <mat-tree [dataSource]="treeData" [treeControl]="treeControl"
         class="tree">
         <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
           <li class="mat-tree-node tree-node">
             <div>
               <button mat-icon-button disabled></button>
-              <ng-container [ngTemplateOutlet]="patternlabel"
-              [ngTemplateOutletContext]="{row:node}"></ng-container>
+              <mat-checkbox [checked]="selection.isSelected(node)"
+                            (click)="$event.stopPropagation()"
+                            [value]="node"
+                            [disabled]="node.count === 0"
+                            [aria-label]="node.label">
+                <ng-container [ngTemplateOutlet]="patternlabel"
+                    [ngTemplateOutletContext]="{row:node}"></ng-container>
+              </mat-checkbox>
             </div>
+            <div>{{node.count}}</div>
           </li>
         </mat-tree-node>
         <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
@@ -24,8 +42,15 @@
                     {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                   </mat-icon>
                 </button>
-                <ng-container [ngTemplateOutlet]="patternlabel"
-                  [ngTemplateOutletContext]="{row:node}"></ng-container>
+                <mat-checkbox [checked]="selection.isSelected(node)"
+                    (click)="$event.stopPropagation()"
+                    (change)="selection_change($event, node)"
+                    [disabled]="node.count === 0"
+                    [value]="node"
+                    [aria-label]="node.label">
+                  <ng-container [ngTemplateOutlet]="patternlabel"
+                    [ngTemplateOutletContext]="{row:node}"></ng-container>
+                </mat-checkbox>
               </div>
               <div [class.tree-node-invisible]="treeControl.isExpanded(node)">{{node.count}}</div>
             </div>
@@ -44,8 +69,14 @@
                     {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                   </mat-icon>
                 </button>
-                <ng-container [ngTemplateOutlet]="patternlabel"
-                  [ngTemplateOutletContext]="{row:node}"></ng-container>
+                <mat-checkbox [checked]="selection.isSelected(node)"
+                    (click)="$event.stopPropagation()"
+                    [value]="node"
+                    [disabled]="node.count === 0"
+                    [aria-label]="node.label">
+                  <ng-container [ngTemplateOutlet]="patternlabel"
+                    [ngTemplateOutletContext]="{row:node}"></ng-container>
+                </mat-checkbox>
               </div>
               <div>{{node.count}}</div>
             </div>
