Moves html manipulation to app.
The modifying of the text html is now in python using lxml.
Greately reduces code that needs to be maintained.
Checkboxes and text selection working in stv.
Still needs work on hierarchical selections.
Still needs tree node highlighting.

--- a/classroom/src/app/text-view/text-view.component.css
+++ b/classroom/src/app/text-view/text-view.component.css
@@ -9,9 +9,6 @@
   overflow-y: auto;
 }
 
-.tree-node-invisible {
-  display: none;
-}
 .tree ul,
 .tree li {
   margin-top: 0;
@@ -66,4 +63,8 @@ tr.cluster-detail-row {
   max-width: 6.5in;
   padding-left: 18px;
   padding-right: 18px;
+}
+
+.d_none {
+  display: none;
 }
