Organizes imports. Intermediate working text view.

--- a/classroom/src/app/grouping/grouping.component.html
+++ b/classroom/src/app/grouping/grouping.component.html
@@ -14,7 +14,7 @@
             </mat-form-field>
           </div>
           <button mat-raised-button color="primary" class="go_button"
-                  (click)="generate_groups(event$)">Group Students</button>
+                  (click)="generate_groups($event)">Group Students</button>
         </mat-drawer>
         <mat-drawer-content class="groups_content">
           <h2>Generated Groups</h2>
