--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -12,7 +12,7 @@
           aria-label="Collapse All" matTooltip="Collapse All">
         <mat-icon>arrow_right</mat-icon>
       </button>
-      <button mat-icon-button (click)="selection.clear()"><mat-icon>check_box_outline_blank</mat-icon></button>
+      <!--<button mat-icon-button (click)="selection.clear()"><mat-icon>check_box_outline_blank</mat-icon></button>-->
       </mat-toolbar>
       <mat-tree [dataSource]="treeData" [treeControl]="treeControl"
         class="tree">
