--- a/classroom/src/app/comparison/comparison.component.html
+++ b/classroom/src/app/comparison/comparison.component.html
@@ -3,7 +3,83 @@
     <mat-card-title>Dictionary Categories</mat-card-title>
     <mat-card-subtitle>Select up to {{max_clusters}}:</mat-card-subtitle>
     <mat-card-content>
-      <table mat-table matSort #clusterTable
+      <mat-tree [dataSource]="treeData" [treeControl]="treeControl" class="tree">
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+          <li class="mat-tree-node tree-node">
+            <div>
+              <button mat-icon-button disabled></button>
+              <mat-checkbox [checked]="selection.isSelected(node)"
+                (click)="$event.stopPropagation()"
+                [value]="node"
+                [disabled]="node.max_count === 0"
+                [aria-label]="node.label">
+                <ng-container [ngTemplateOutlet]="patternlabel"
+                  [ngTemplateOutletContext]="{row:node}"></ng-container>
+              </mat-checkbox>
+            </div>
+            <div>{{node.counts}}</div>
+          </li>
+        </mat-tree-node>
+        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+          <li>
+            <div class="mat-tree-node tree-node">
+              <div>
+                <button mat-icon-button matTreeNodeToggle
+                  [attr.aria-label]="'Toggle ' + node.label">
+                  <mat-icon class="mat-icon-rtl-mirror">
+                    {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                  </mat-icon>
+                </button>
+                <mat-checkbox [checked]="selection.isSelected(node)"
+                    (click)="$event.stopPropagation()"
+                    (change)="selection_change($event, node)"
+                    [disabled]="node.max_count === 0"
+                    [value]="node"
+                    [aria-label]="node.label">
+                  <ng-container [ngTemplateOutlet]="patternlabel"
+                    [ngTemplateOutletContext]="{row:node}"></ng-container>
+                </mat-checkbox>
+              </div>
+              <div [class.d_none]="treeControl.isExpanded(node)">{{node.counts}}</div>
+            </div>
+            <ul [class.d_none]="!treeControl.isExpanded(node)">
+              <ng-container matTreeNodeOutlet></ng-container>
+            </ul>
+          </li>
+        </mat-nested-tree-node>
+        <mat-tree-node *matTreeNodeDef="let node; when: hasPatterns">
+          <li [style.width]="'100%'">
+            <div class="mat-tree-node tree-node">
+              <div>
+                <button mat-icon-button matTreeNodeToggle
+                  [attr.aria-label]="'Toggle ' + node.label">
+                  <mat-icon class="mat-icon-rtl-mirror">
+                    {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                  </mat-icon>
+                </button>
+                <mat-checkbox [checked]="selection.isSelected(node)"
+                    (click)="$event.stopPropagation()"
+                    (change)="selection_change($event, node)"
+                    [value]="node"
+                    [disabled]="node.max_count === 0"
+                    [aria-label]="node.label">
+                  <ng-container [ngTemplateOutlet]="patternlabel"
+                    [ngTemplateOutletContext]="{row:node}"></ng-container>
+                </mat-checkbox>
+              </div>
+              <div>{{node.counts}}</div>
+            </div>
+            <div
+              [class.pattern-table]="true"
+              [class.d_none]="!treeControl.isExpanded(node)">
+              <app-compare-patterns-table
+                [patterns]="node.patterns" [colors]="doc_colors">
+              </app-compare-patterns-table>
+            </div>
+          </li>
+        </mat-tree-node>
+      </mat-tree>
+<!--      <table mat-table matSort #clusterTable
              #TableSort=matSort  [dataSource]="clusters"
              matSortDisableClear multiTemplateDataRows>
         <ng-container matColumnDef="name">
@@ -14,7 +90,7 @@
                 (change)="selection_change($event, clust)"
                 [checked]="selection.isSelected(clust)"
                 [value]="clust.id"
-                [aria-label]="clust.name"> <!-- add checkboxLabel method -->
+                [aria-label]="clust.name"> <-- add checkboxLabel method ->
               <span class="cluster-name">
                 <span [attr.data-key]="clust.id">{{clust.name}}</span>
                 <button mat-icon-button
@@ -83,7 +159,7 @@
             [class.cluster-expanded-row]="clust === expanded"></tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']"
             class="cluster-detail-row"></tr>
-      </table>
+      </table>-->
     </mat-card-content>
   </mat-card>
   <div class="document_area" *ngIf="!is_safari">
@@ -123,3 +199,11 @@
     </main>
   </ng-container>
 </div>
+
+<ng-template #patternlabel let-row="row">
+  <span class="pattern_label">{{row.label}}</span>
+  <button *ngIf="row.help" mat-icon-button matTooltip="{{row.help}}"
+    matTooltipPosition="after">
+    <mat-icon class="tooltip-icon">comment</mat-icon>
+  </button>
+</ng-template>
