--- a/classroom/src/app/scatterplot/scatterplot.component.html
+++ b/classroom/src/app/scatterplot/scatterplot.component.html
@@ -13,12 +13,12 @@
       </div><!-- category.id => name(category.id) -->
       <google-chart #scatterplot *ngIf="scatter_data"
                     [title]="x_category.id+' vs '+y_category.id"
-                    [type]="'ScatterChart'"
+                    [type]="chartType"
                     [columns]="[x_category.id, y_category.id, {type: 'string', role: 'id'}, {type: 'string', role: 'style'}, {'type': 'string', 'role': 'tooltip'}]"
                     [data]="scatter_data"
                     (select)="select_point(scatterplot, $event)"
                     [options]="options"
-                    width="{{chart_width}}" height="{{chart_height}}"></google-chart>
+                    [width]="chart_width" [height]="chart_height"></google-chart>
     </mat-card-content>
   </mat-card>
 </div>
