--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -136,9 +136,9 @@
     </mat-card-content>
   </mat-card>
   <mat-card *ngIf="tagged_text" class="text_card">
-    <mat-card-title class="text_head"
-      >ID:&nbsp;{{ tagged_text.documents[0].text_id }}</mat-card-title
-    >
+    <mat-card-title class="text_head">
+      ID:&nbsp;{{ tagged_text.documents[0].text_id }}
+    </mat-card-title>
     <mat-card-content>
       <article
         class="text_content"
